--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,18 @@
     <string name="app_name">Culttrip</string>
     <string name="welcome_des">Welcome To Culttrip Client This Application Powered By Vortex-io to show the culture activity with Million Feature Click Continue to Start Using The Application</string>
     <string name="continue_button">Continue</string>
+    <string name="password">Password</string>
+    <string name="email_address">Email Address</string>
+    <string name="login">Login</string>
+    <string name="dont_have_account_register">Dont have Account ? Register</string>
+    <string name="email_required">Email Required</string>
+    <string name="pass_required">Password Required</string>
+    <string name="name">Full Name</string>
+    <string name="number">Phone Number</string>
+    <string name="locaiton">Location Name</string>
+    <string name="register">Register</string>
+    <string name="name_required">Full Name Required</string>
+    <string name="phone_required">Phone Number Required</string>
+    <string name="location_required">Location Name Required</string>
+    <string name="register_completed">Register Completed</string>
 </resources>
