--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,7 @@
     <string name="recommendations">Recommendations</string>
     <string name="home">Home</string>
     <string name="fav">Fav</string>
+    <string name="dummy_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
+    <string name="featured">FEATURED</string>
+    <string name="recommend">RECOMMENDED</string>
 </resources>
