--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="arts_culture"><![CDATA[Arts & Culture]]></string>
     <string name="categories">Categories</string>
     <string name="popular_routs">Popular Routs</string>
+    <string name="places">Places</string>
 </resources>
