--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="promoted">Promoted Recipes</string>
     <string name="add_item">Add Item To Cart</string>
     <string name="comments">View Comments</string>
+    <string name="recipe_success">Item Saved in Cart</string>
 </resources>
